# web-calculator

./: .gitignore  CMakeLists.txt  README.md
http-server/: CMakeLists.txt
http-server/include/: http_server.hpp
http-server/src/: http_server.cpp
src/: main.cpp
static/: index.html  index.js
